# RAG-practice

./: .gitignore  chain_bot.py  chain_bot_lib.py  main.py  manage.py  pyproject.toml  rag_bge_m3_class_table.py  rag_pdf_tables.py  rag_test_table.py  step03_embedding.py  step04_vectorstore_huggingface.py  step05_retriever.py
__old/: chain_bot.py  step01_document_loader.py  step02_text_splitter.py  step04_vectorstore_bge-m3.py  step07_basic_chain_huggingface.py  step08_rag_chain_bge-m3.py
__rag_before_class/: rag_bge_m3.py  rag_bge_m3_lib.py
chroma_db_bge_m3/: chroma.sqlite3
chroma_db_huggingface/: chroma.sqlite3
rag/: asgi.py  settings.py  urls.py  wsgi.py
templates/: 중대재해처벌법_챗봇.html
