[project]
name = "011-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "django>=5.2.14",
    "flagembedding>=1.4.0",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.3",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pdfplumber>=0.11.9",
    "pypdf>=6.12.1",
    "sentence-transformers>=5.5.1",
]
